# knowrob_openease

./: CMakeLists.txt  Dockerfile  README.md  build.sh  openease.launch  package.xml  run_knowrob.sh
knowrob/: Dockerfile
launch/: openease.launch
ros-prolog/: Dockerfile  build.sh
scripts/: image_saver.py
src/: __init__.pl  neems.pl  query_handler.pl  query_history.pl
src/backends/: canvas.pl  graph.pl  table.pl  timeline.pl  tree.pl
src/ide/: __init__.pl  editor.pl
src/marker_vis/: __init__.pl  image_saver.py  vis.pl
