<?xml version="1.0"?>
<package format="2">
  <name>knowrob_openease</name>
  <version>0.0.1</version>
  <description>A package to tunnel queries from openEASE</description>

  <maintainer email="sasjonge@uni-bremen.de">Sascha Jongebloed</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>knowrob</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>knowrob</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
